--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ mark_as_advanced(EXECUTABLE_OUTPUT_PATH LIBRARY_OUTPUT_PATH)
 mark_as_advanced(SQLITE3_INCLUDE_DIR SQLITE3_LIBRARY)
 mark_as_advanced(JSON_INCLUDE_DIR JSON_LIBRARY)
 
+OPTION(TARGET_SAILFISH "Target Sailfish OS" 0)
+
 option(ENABLE_CURL "Enable cURL support for fetching media" 1)
 
 if (NOT ENABLE_CURL)
@@ -142,11 +144,13 @@ if(WIN32)
 else()
 	# Unix probably
 	if(BUILD_CLIENT)
-		#find_package(X11 REQUIRED)
-		#find_package(OpenGL REQUIRED)
-		#find_package(JPEG REQUIRED)
-		#find_package(BZip2 REQUIRED)
-		#find_package(PNG REQUIRED)
+		if(NOT TARGET_SAILFISH)
+			find_package(X11 REQUIRED)
+			find_package(OpenGL REQUIRED)
+			find_package(JPEG REQUIRED)
+			find_package(BZip2 REQUIRED)
+			find_package(PNG REQUIRED)
+		endif()
 		if(APPLE)
 			FIND_LIBRARY(CARBON_LIB Carbon)
 			FIND_LIBRARY(COCOA_LIB Cocoa)
@@ -166,8 +170,12 @@ else()
 	find_library(XXF86VM_LIBRARY Xxf86vm)
 	mark_as_advanced(XXF86VM_LIBRARY)
 	set(CLIENT_PLATFORM_LIBS ${CLIENT_PLATFORM_LIBS} ${XXF86VM_LIBRARY})
-	set(CLIENT_PLATFORM_LIBS ${CLIENT_PLATFORM_LIBS} -lGLESv2 -lEGL -lwayland-client -lwayland-egl)
-	set(CLIENT_PLATFORM_LIBS ${CLIENT_PLATFORM_LIBS} -lGLESv2 -lSDL2)
+
+	if(TARGET_SAILFISH)
+		set(CLIENT_PLATFORM_LIBS ${CLIENT_PLATFORM_LIBS} -lGLESv2 -lEGL -lwayland-client -lwayland-egl)
+		set(CLIENT_PLATFORM_LIBS ${CLIENT_PLATFORM_LIBS} -lGLESv2 -lSDL2)
+		add_definitions(-DSAILFISH -D_IRR_COMPILE_WITH_OGLES2_)
+	endif()
 endif()
 
 find_package(Sqlite3 REQUIRED)
