--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -581,7 +581,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/src/ @CMAKE_CURRENT_SOURCE_DIR@/src/util 
+INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/src/ @CMAKE_CURRENT_SOURCE_DIR@/src/util @CMAKE_CURRENT_SOURCE_DIR@/src/script @CMAKE_CURRENT_SOURCE_DIR@/src/script/common @CMAKE_CURRENT_SOURCE_DIR@/src/script/cpp_api @CMAKE_CURRENT_SOURCE_DIR@/src/script/lua_api
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
